--- a/SPCAC1.html
+++ b/SPCAC1.html
@@ -1,16 +1,37 @@
 <html>
 <head>
     <title>SPCAC</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <header>
         <h1>Site Para Comprar Alguma Coisa</h1>
-    
+        
     </header>
-
-
+    <div>
+        <ul>
+            <li>
+                <a href="">HOME</a>
+            </li>
+            <li>
+                <a href="">PRODUTOS</a>
+            </li>
+            <li>
+                <a href="">CONTATOS</a>
+            </li>
+            <li>
+                <a href="">QUEM SOMOS</a>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <section id="titulo">Celulares</section>
+        <section id="link">***Imagens***</section>
+        <section id="titulo">Processadores:</section>
+        <section id="link">***Imagens***</section>
+    </div>
     <footer>
-
+        <center>Site para comprar alguma coisa</center>
     </footer>
 </body>
 </html>
